<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TuEmpleo</string>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Opciones</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Diapositivas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola blank fragment</string>


    <!-- Strings related to login -->
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión o registrarse</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="welcome">Bienvenido!</string>
    <string name="invalid_username">Nombre de usuario no válido</string>
    <string name="login_failed">TuEmpleo</string>

    //label titulos
    <string name="lb_titulo_mprincipal">Menú Principal</string>
    <string name="lb_titulo_about">A cerca de</string>
    <string name="lb_titulo_formulario">Formulario</string>
    <string name="lb_titulo_home">Inicio</string>
    <string name="lb_titulo_login">Iniciar sesión</string>
    <string name="lb_titulo_report">Reporte</string>

    //settings menu
    <string name="st_traductor">Idioma</string>

    //mensajes prueba
    <string name="ms_select">Seleccione un idioma</string>
    <string name="greet">Este es un mensaje de prueba</string>

    //mensajes home
    <string name="btn_more">Mostrar màs</string>
    <string name="blogs">Blogs</string>
    <string name="data_published1">22/Septiembre</string>
    <string name="article_name2">Accesibilidad Cognitiva</string>
    <string name="text_teaser1">La inclusión laboral de personas con discapacidad en el sector tecnológico es una alternativa para disminuir la brecha de exclusión laboral a la que está sometida esta población...</string>
    <string name="data_published2">13/Agosto</string>
    <string name="text_teaser2">Contribuir a crear entornos y documentos fáciles y accesibles para todas las personas es una de las metas … adaptamos documentos a lectura fácil...</string>
    <string name="this_is_a_title">Certificaciones por Google</string>
    <string name="selection_title1">TML y CSS</string>
    <string name="this_is_a_description1">Esta es una buena noticia que alegrará a muchos profesionales que se dedican al área del diseño, desarrollo y redacción de contenidos para web...</string>
    <string name="selection_title2">Comercio Electrónico</string>
    <string name="this_is_a_description2">Hoy me complace anunciar el lanzamiento de un curso-diploma diseñado por la Escuela de Organización Industrial y desarrollado en colaboración...</string>
    <string name="selection_title3">Marketing Digital</string>
    <string name="this_is_a_description3">Google ha elaborado un completísimo curso de 40 horas de duración abocado al marketing y las estrategias de ventas...</string>
    <string name="dec_butom">Este es un blog que provee información de tipos de discapacidades para ingresar has clic en el boton</string>
    <string name="team">Equipo</string>
    <string name="name2" translatable="false">Oscar Julian Hernandez Bonilla</string>
    <string name="name_desc1">Scrum Master</string>
    <string name="name_desc2">Product Owner</string>
    <string name="name3" translatable="false">Esteban Perdomo Buitrago</string>
    <string name="name_desc3">Scrum Team</string>
    <string name="saludo">Bienvenido</string>
    <string name="ques_1">¿Que tipo de discapacidad tiene?</string>
    <string name="rt_1_q_1">Sensorial</string>
    <string name="tr_2_q_1">Intelectual</string>
    <string name="tr_3_q_1">Física</string>
    <string name="tr_4_q_1">Múltiple</string>
    <string name="tr_5_q_1">Otra</string>
    <string name="ques_2">Grado de discapacidad</string>
    <string name="tr_1_q_2">Alta</string>
    <string name="tr_2_q_2">Media</string>
    <string name="tr_3_q_2">Baja</string>
    <string name="ques_3">¿En que rango de edad se encuentra?</string>
    <string name="tr_1_q_3" translatable="false">18 - 24</string>g>
    <string name="tr_2_q_3" translatable="false">25 - 30</string>
    <string name="tr_3_q_3" translatable="false">31 - 35</string>
    <string name="tr_4_q_3">36 o más</string>
    <string name="ques_4">¿Cual es su ultimo nivel de escolaridad?</string>
    <string name="tr_1_q4">Básica Primaria</string>
    <string name="tr_2_q_4">Básica secundaria</string>
    <string name="tr_3_q_4">Profesional técnica</string>
    <string name="tr_5_q_4">Postgrado</string>
    <string name="ques_5">¿Cuenta con experiencia laboral?</string>
    <string name="tr_1_q_5">Si</string>
    <string name="tr_2_q_5">No</string>
    <string name="lb_contact">Contactanos</string>
    <string name="lb_titulo_singup">Registrarse</string>
    <string name="article_name1">Inclusión laboral de personas con discapacidad en el sector tecnológico</string>
    <string name="this_is_a_title2">Conoce los distintos tipos de discapacidad</string>
    <string name="team_dec">Este trabajo es gracias a</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="prompt_email">Correo</string>
    <string name="invalid_password">La contraseña debe tener al menos 5 caracteres</string>
    <string name="ms_prueba">Este es un mensaje de prueba</string>
    <string name="name1" translatable="false">Javier Andres Ramirez Zabaleta</string>

    //SignUp y LongIn
    <string name="li_email">Correo Electrónico</string>
    <string name="li_passw">Contraseña</string>
    <string name="li_btn">Iniciar sesión</string>

    <string name="su_name">Nombres</string>
    <string name="chat_name">Nombre</string>
    <string name="su_last_name">Apellidos</string>
    <string name="su_email">Correo Electrónico</string>
    <string name="su_passw">Contraseña</string>
    <string name="su_passw2">Confirmar Contraseña</string>
    <string name="su_btn">Registrarse</string>
    <string name="su_phone">Teléfono</string>
    <string name="su_error_pasw">Las contraseñas no coinciden</string>
    <string name="otp_message1">Se ha enviado un código por sms a su teléfono</string>
    <string name="otp_message2">Ingrese el código de verificación</string>
    <string name="otp_messageButton">Verificar</string>
    <string name="nav_header_subtitle" translatable="false">tuempleoapp@gmail.com</string>
    <string name="form_enviar">Enviar</string>


    //Resultados
    <string name="resul_message">Según los datos ingresados te puede interesar:</string>
    <string name="re_empleo">Servicio al cliente</string>
    <string name="resul_more">Para más información puedes ingresar al enlace de abajo</string>
    <string name="resul_emple_descop">Este tipo de discapacidad implica, generalmente, dificultades en la comunicación y el lenguaje, así como las deficiencias auditivas o visuales. Pueden destacarse en labores como servicio al cliente, no obstante, como alcanzan niveles altos de concentración pueden ser de gran utilidad.</string>

    <string name="resul1_emple_descop">Si cuentas con una disminución auditiva puedes ser muy eficiente en un puesto como grabador de datos, debido a que, una vez realizado un curso de mecanografía, se alcanzan altos niveles de producción.</string>
    <string name="pedir_form">Completa el Formulario ahora</string>
    <string name="re1_empleo">Mecanógrafo</string>

    <string name="re2_emple_descap">Trabajar en comercio minorista</string>
    <string name="resul2_emple_descop">Este es uno de los trabajos para personas con discapacidad que efectúas sin problemas, ya que, solo requiere de una formación mínima en cálculo y lenguaje.</string>
    <string name="autenticando">Autenticando</string>
    <string name="tl_chat">Chat</string>

    //
    <string name="report_download_title">Selecciona una opción para descargar los reportes</string>
    <string name="rbtn_general">Reporte general</string>
    <string name="rbtn_user">Reporte usuario</string>
    <string name="report_download_button">Descargar en pdf</string>
    <string name="report_text_correo">Correo electrónico del usuario</string>

</resources>