<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tuempleo.ui.home.HomeFragment"
        android:label="@string/lb_titulo_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.tuempleo.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.tuempleo.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.tuempleo.ui.login.LoginFragment"
        android:label="@string/lb_titulo_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.tuempleo.About"
        android:label="@string/lb_titulo_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/repertorioFragment"
        android:name="com.example.tuempleo.repertorio"
        android:label="@string/lb_titulo_mprincipal"
        tools:layout="@layout/fragment_repertorio" />
    <activity
        android:id="@+id/formulario"
        android:name="com.example.tuempleo.Formulario"
        android:label="@string/lb_titulo_formulario"
        tools:layout="@layout/activity_formulario" />
</navigation>