<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/app_bar_search"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="Search"
            app:actionViewClass="android.widget.SearchView" />
        <item
            android:id="@+id/repertorioFragment"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="Menu Principal" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="About us" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />


    </group>
    <group android:checkableBehavior="single">
     <item
        android:id="@+id/loginFragment"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="Login" />  </group>

</menu>